# pacman

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  constants.h  draw.c  draw.h  entity.c  entity.h  event.c  event.h  game.c  game.h  ghost.c  ghost.h  level.h  main.c  maze.c  maze.h  pacman.c  pacman.h  player.c  player.h  prng.c  prng.h  world.c  world.h
assets/: README.md  chroma_key.fs
